# hyperdeck-archiver

./: .gitignore  SETUP-RASPBERRY-PI.md  config.example.yaml  pyproject.toml  requirements.txt  run.py  step0_probe.py  step0b_ftp_probe.py
schedulers/: com.samc.hyperdeck-archiver.ingest.plist  com.samc.hyperdeck-archiver.prune.plist  hyperdeck-archiver-ingest.service  hyperdeck-archiver-ingest.timer  hyperdeck-archiver-prune.service  hyperdeck-archiver-prune.timer
src/hyperdeck_archiver/: __init__.py  bmd_client.py  cli.py  config.py  ftp_client.py  ingest.py  manifest.py  models.py  nas.py  notifier.py  prune.py  transfer.py  util.py
tests/: test_core.py
