[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdeck-archiver"
version = "0.1.0"
description = "Archive Blackmagic HyperDeck footage to a Synology NAS, then prune by age."
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
fast = ["xxhash>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
hyperdeck-archiver = "hyperdeck_archiver.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
